# serializer version: 1
# name: test_call_with_heterogeneous_tuple_args
  '''
  
  define i64 @first(i64 %a, double %b) {
  entry:
    ret i64 %a
  }
  define i64 @main(i64 %x, double %y) {
  entry:
    %_0 = alloca double, i64 2
    store i64 %x, ptr %_0
    %_1 = getelementptr double, ptr %_0, i64 1
    store double %y, ptr %_1
    %_2 = load { i64, double }, ptr %_0
    %_3 = extractvalue { i64, double } %_2, 0
    %_4 = extractvalue { i64, double } %_2, 1
    %r = call i64 @first(i64 %_3, double %_4)
    ret i64 %r
  }
  '''
# ---
# name: test_call_with_runtime_tuple_as_args
  '''
  
  define i64 @add(i64 %a, i64 %b) {
  entry:
    %_0 = add i64 %a, %b
    ret i64 %_0
  }
  define i64 @main(i64 %x, i64 %y) {
  entry:
    %_1 = alloca double, i64 2
    store i64 %x, ptr %_1
    %_2 = getelementptr double, ptr %_1, i64 1
    store i64 %y, ptr %_2
    %_3 = load { i64, i64 }, ptr %_1
    %_4 = extractvalue { i64, i64 } %_3, 0
    %_5 = extractvalue { i64, i64 } %_3, 1
    %r = call i64 @add(i64 %_4, i64 %_5)
    ret i64 %r
  }
  '''
# ---
# name: test_inline_pack_call
  '''
  
  define i64 @add(i64 %a, i64 %b) {
  entry:
    %_0 = add i64 %a, %b
    ret i64 %_0
  }
  define i64 @main(i64 %x, i64 %y) {
  entry:
    %_2 = insertvalue { i64, i64 } undef, i64 %x, 0
    %_1 = insertvalue { i64, i64 } %_2, i64 %y, 1
    %_3 = extractvalue { i64, i64 } %_1, 0
    %_4 = extractvalue { i64, i64 } %_1, 1
    %r = call i64 @add(i64 %_3, i64 %_4)
    ret i64 %r
  }
  '''
# ---
